--- a/shapes/pathshapes/rectangle/RectangleShapeConfigWidget.ui
+++ b/shapes/pathshapes/rectangle/RectangleShapeConfigWidget.ui
@@ -12,35 +12,39 @@
   <property name="windowTitle" >
    <string>Rectangle Shape</string>
   </property>
-  <layout class="QVBoxLayout" >
-   <item>
-    <widget class="QGroupBox" name="groupBox" >
-     <property name="title" >
-      <string>Properties</string>
+  <layout class="QGridLayout" >
+   <item row="0" column="0" >
+    <widget class="QLabel" name="label" >
+     <property name="text" >
+      <string>Corner radius x:</string>
      </property>
-     <layout class="QGridLayout" >
-      <item row="0" column="0" >
-       <widget class="QLabel" name="label" >
-        <property name="text" >
-         <string>Corner radius x:</string>
-        </property>
-       </widget>
-      </item>
-      <item row="0" column="1" >
-       <widget class="KoUnitDoubleSpinBox" name="cornerRadiusX" />
-      </item>
-      <item row="1" column="0" >
-       <widget class="QLabel" name="label_2" >
-        <property name="text" >
-         <string>Corner radius y:</string>
-        </property>
-       </widget>
-      </item>
-      <item row="1" column="1" >
-       <widget class="KoUnitDoubleSpinBox" name="cornerRadiusY" />
-      </item>
-     </layout>
     </widget>
+   </item>
+   <item row="0" column="1" >
+    <widget class="KoUnitDoubleSpinBox" name="cornerRadiusX" />
+   </item>
+   <item row="1" column="0" >
+    <widget class="QLabel" name="label_2" >
+     <property name="text" >
+      <string>Corner radius y:</string>
+     </property>
+    </widget>
+   </item>
+   <item row="1" column="1" >
+    <widget class="KoUnitDoubleSpinBox" name="cornerRadiusY" />
+   </item>
+   <item row="2" column="0" >
+    <spacer>
+     <property name="orientation" >
+      <enum>Qt::Vertical</enum>
+     </property>
+     <property name="sizeHint" >
+      <size>
+       <width>20</width>
+       <height>40</height>
+      </size>
+     </property>
+    </spacer>
    </item>
   </layout>
  </widget>
