--- a/plugins/defaultTools/defaulttool/DefaultToolWidget.ui
+++ b/plugins/defaultTools/defaulttool/DefaultToolWidget.ui
@@ -5,8 +5,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>222</width>
-    <height>341</height>
+    <width>252</width>
+    <height>354</height>
    </rect>
   </property>
   <property name="currentIndex" >
@@ -148,7 +148,23 @@
          </property>
         </widget>
        </item>
-       <item row="0" column="1" >
+       <item rowspan="2" row="0" column="1" >
+        <widget class="KoAspectButton" native="1" name="aspectButton" >
+         <property name="minimumSize" >
+          <size>
+           <width>10</width>
+           <height>20</height>
+          </size>
+         </property>
+         <property name="maximumSize" >
+          <size>
+           <width>10</width>
+           <height>30</height>
+          </size>
+         </property>
+        </widget>
+       </item>
+       <item row="0" column="2" >
         <widget class="QDoubleSpinBox" name="widthSpinBox" >
          <property name="minimum" >
           <double>-10000.000000000000000</double>
@@ -168,7 +184,7 @@
          </property>
         </widget>
        </item>
-       <item row="1" column="1" >
+       <item row="1" column="2" >
         <widget class="QDoubleSpinBox" name="heightSpinBox" >
          <property name="minimum" >
           <double>-10000.000000000000000</double>
@@ -189,7 +205,7 @@
       <property name="sizeHint" >
        <size>
         <width>20</width>
-        <height>20</height>
+        <height>16</height>
        </size>
       </property>
      </spacer>
@@ -373,6 +389,12 @@
    <class>KoPositionSelector</class>
    <extends>QWidget</extends>
    <header>KoPositionSelector.h</header>
+   <container>1</container>
+  </customwidget>
+  <customwidget>
+   <class>KoAspectButton</class>
+   <extends>QWidget</extends>
+   <header>KoAspectButton.h</header>
    <container>1</container>
   </customwidget>
  </customwidgets>
